[package]
name = "haruka_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
