[package]
name = "haruka_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = "0.4"
hex = "0.4"
hmac = "0.12"
once_cell = "1.21.3"
rand = "0.9"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
jsonwebtoken = "9.3"
url = "2.5"
